--- a/scss/views/_index.scss
+++ b/scss/views/_index.scss
@@ -35,6 +35,10 @@
     text-align: center;
 
   }
+  .labcolegas-mediaquery{
+    @include flex(flex,column,center);
+    align-items: center;
+  }
   
   /*seccion obras sociales*/
  
